--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <link rel="apple-touch-startup-image" href="<%= BASE_URL %>img/launch.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>EnergyMixRadio</title>
   </head>
   <body>
